--- a/css/style.css
+++ b/css/style.css
@@ -41,10 +41,29 @@ h1 {
 
 .photographer_section article h2 {
     color: #D3573C;
-    font-size: 36px;
+    font-size: 32px;
+    margin-bottom: 0;
+}
+
+.photographer_section article h3 {
+    color: #D3573C;
+    font-size: small;
+    margin: 0;
 }
 
 .photographer_section article img {
     height: 200px;
     width: 200px;
+    object-fit: cover;
+    border-radius: 100px;
+}
+
+.photographer_section article p {
+    margin: 0;
+    font-size: 0.8rem;
+}
+
+.photographer_section article span {
+    color: rgb(156, 156, 156);
+    font-size: 0.8rem;
 }
