--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ h1 {
     grid-template-columns: 1fr 1fr 1fr;
     gap: 70px;
     margin-top: 100px;
+    padding-bottom: 5rem;
 }
 
 .photographer_section article {
