--- a/css/style.css
+++ b/css/style.css
@@ -69,9 +69,23 @@ h1 {
     font-size: 0.8rem;
 }
 
+.photograph-header :nth-child(1) {
+    display: flex;
+    flex-direction: row-reverse;
+    /* background-color: #FAFAFA; */
+}
+
+.photograph-header :nth-child(2) {
+    padding-top: 5rem;
+}
+
 .photograph-header article img{
     height: 200px;
     width: 200px;
     object-fit: cover;
     border-radius: 100px;
+}
+
+.photograph-header article video{
+    width: 200px;
 }
