--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,3 +1,14 @@
+body {
+    font-family: "DM Sans", sans-serif;    
+    margin-top: 18px;
+    margin-left: 0px;
+}
+
+.logo {
+    height: 50px;
+    margin-left: 100px;
+}
+
 #contact_modal {
     display: none;
 }
@@ -19,6 +30,8 @@
     background-color: #901C1C;
     border-radius: 5px;
     cursor: pointer;
+    justify-content: center;
+    align-items: center;
 }
 
 .modal {
@@ -73,4 +86,39 @@ form input {
     height: 68px;
     border: none;
     border-radius: 5px;
+}
+
+.profilHeader {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+    padding: 3rem 2.5rem;
+    margin-top: 30px;
+}
+
+.profilPicture {
+    height: 200px;
+    width: 200px;
+    object-fit: cover;
+    border-radius: 100px;
+}
+
+.profilNamePhotographer {
+    color: #D3573C;
+    font-size: 58px;
+    margin-bottom: 0;
+    margin-top: 0;
+}
+
+.profilLocationPhotographer {
+    color: #901C1C;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    font-size: 22px;
+}
+
+.profilTagPhotographer {
+    margin: 0;
+    font-size: 18px;
 }
