--- a/css/photographer.css
+++ b/css/photographer.css
@@ -106,7 +106,7 @@ form input {
 
 .profilNamePhotographer {
     color: #D3573C;
-    font-size: 58px;
+    font-size: 50px;
     margin-bottom: 0;
     margin-top: 0;
 }
@@ -121,4 +121,18 @@ form input {
 .profilTagPhotographer {
     margin: 0;
     font-size: 18px;
+}
+
+.photograph-media {
+    display: flex;
+}
+
+.profilPictureMedia {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+.profilVideo{
+    width: 100%;
 }
