--- a/css/photographer.css
+++ b/css/photographer.css
@@ -11,6 +11,11 @@ body {
 
 #contact_modal {
     display: none;
+    position: absolute;
+    margin-top: -18px;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.627);
 }
 
 .photograph-header {
@@ -37,16 +42,17 @@ body {
 .modal {
     border-radius: 5px;
     background-color: #DB8876;
-    width: 50%;
+    width: 35%;
+    margin-left: 30%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
     padding: 35px;
-    margin: auto;
 }
 
 .modal header {
+    display: flex;
     justify-content: space-between;
     width: 100%;
 }
@@ -56,7 +62,7 @@ body {
 }
 
 .modal header h2 {
-    font-size: 64px;
+    font-size: 50px;
     font-weight: normal;
     text-align: center;
 }
