--- a/css/photographer.css
+++ b/css/photographer.css
@@ -42,7 +42,9 @@ body {
 .modal {
     border-radius: 5px;
     background-color: #DB8876;
+    box-shadow: 0px 0px 15px -5px #00000078;
     width: 35%;
+    margin-top: 60px;
     margin-left: 30%;
     display: flex;
     flex-direction: column;
@@ -59,12 +61,14 @@ body {
 
 .modal header img {
     cursor: pointer;
+    align-self: baseline;
+    height: 30px;
 }
 
 .modal header h2 {
-    font-size: 50px;
+    font-size: 45px;
     font-weight: normal;
-    text-align: center;
+    margin-top: -15px;
 }
 
 form {
