--- a/css/photographer.css
+++ b/css/photographer.css
@@ -29,6 +29,7 @@ body {
     font-weight: bold;
     color: white;
     padding: 11px;
+    margin-top: 20px;
     width: 170px;
     height: 70px;
     border: none;
@@ -57,6 +58,7 @@ body {
     display: flex;
     justify-content: space-between;
     width: 100%;
+    height: 115px;
 }
 
 .modal header img {
@@ -80,20 +82,18 @@ form {
 
 form label {
     color: #312E2E;
-    font-size: 36px;
+    font-size: 25px;
 }
 
 form div {
     display: flex;
     flex-direction: column;
     width: 100%;
-    align-items: self-start;
-    margin-bottom: 26px;
 }
 
 form input {
     width: 100%;
-    height: 68px;
+    height: 45px;
     border: none;
     border-radius: 5px;
 }
@@ -143,6 +143,20 @@ form input {
     object-fit: cover;
 }
 
-.profilVideo{
+.profilVideo {
     width: 100%;
+}
+
+.textAera {
+    resize: none;
+    border: 0px;
+    border-radius: 5px;
+    min-width: 100%; 
+    min-height: 130px;
+    outline: none;
+    font-size: x-large;
+}
+
+#modal-form input{
+    outline: none;
 }
