--- a/css/photographer.css
+++ b/css/photographer.css
@@ -45,7 +45,7 @@ body {
     background-color: #DB8876;
     box-shadow: 0px 0px 15px -5px #00000078;
     width: 35%;
-    margin-top: 60px;
+    margin-top: 55px;
     margin-left: 30%;
     display: flex;
     flex-direction: column;
@@ -92,10 +92,11 @@ form div {
 }
 
 form input {
-    width: 100%;
     height: 45px;
     border: none;
     border-radius: 5px;
+    font-size: large;
+    padding-left: 1rem;
 }
 
 .profilHeader {
@@ -151,7 +152,8 @@ form input {
     resize: none;
     border: 0px;
     border-radius: 5px;
-    min-width: 100%; 
+    padding-left: 1rem;
+    padding-top: 0.5rem;
     min-height: 130px;
     outline: none;
     font-size: x-large;
@@ -160,3 +162,14 @@ form input {
 #modal-form input{
     outline: none;
 }
+
+.borderInput .border-red {
+    border: 2px solid red;
+}
+
+.borderInput .text-red{
+    font-size: 0.8rem;
+    color: red;
+    font-weight: lighter;
+    margin-bottom: -16.5px;
+  }
