--- a/css/photographer.css
+++ b/css/photographer.css
@@ -29,9 +29,29 @@ body {
     height: 300px;
 }
 
-#profilMedia {
+.filterMedia {
     margin: 1rem 0 3rem 0;
     font-weight: bold;
+}
+
+.filterMedia label {
+    padding-right: 1rem;
+}
+
+.filterMedia select {
+    width: 140px;
+    padding: 0.6rem;
+    border: 0;
+    /* border-radius: 5px 5px 0 0; */
+    border-radius: 5px;
+    background-color: #901C1C;
+    color: white;
+    font-weight: bold;
+    box-shadow: 0px 0px 15px -5px #00000078;
+}
+
+.filterMedia select option {
+    padding: 5rem !important;
 }
 
 .contact_button {
