--- a/css/photographer.css
+++ b/css/photographer.css
@@ -164,14 +164,21 @@ form input {
     font-size: 18px;
 }
 
-.photograph-media {
-    display: flex;
+.profilMedia {
+    width: 250px;
 }
 
 .profilPictureMedia {
     width: 100%;
     height: 200px;
+    border-radius: 5px;
     object-fit: cover;
+}
+
+.profilTitleMedia {
+    font-weight: normal;
+    color: #901C1C;
+    margin-top: 0;
 }
 
 .profilVideo {
