--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,7 +1,9 @@
 body {
-    font-family: "DM Sans", sans-serif;    
+    font-family: "DM Sans", sans-serif;
     margin-top: 18px;
-    margin-left: 0px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 85%;
 }
 
 .modalLightbox {
@@ -9,7 +11,7 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    background-color: #312e2ea2;
+    background-color: #ffffff;
     width: 100%;
     height: 100%;
     z-index: 1000;
@@ -17,6 +19,18 @@ body {
 
 .modalLightbox img {
     cursor: pointer;
+    background-color: black;
+}
+
+.lightbox {
+    text-align: center;
+}
+
+.lightbox img{
+    width: 900px !important;
+    height: 700px;
+    border-radius: 5px;
+    object-fit: cover;
 }
 
 #main {
@@ -32,7 +46,8 @@ body {
 #contact_modal {
     display: none;
     position: fixed;
-    margin-top: -20px;
+    margin-top: -18px;
+    margin-left: -5%;
     width: 100%;
     height: 100%;
     background: rgba(255, 255, 255, 0.627);
@@ -89,7 +104,7 @@ body {
     border-radius: 5px;
     background-color: #DB8876;
     box-shadow: 0px 0px 15px -5px #00000078;
-    width: 35%;
+    width: 30%;
     margin-top: 55px;
     margin-left: 30%;
     display: flex;
