--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@
 body {
     font-family: "DM Sans", sans-serif;
     margin: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 85%;
 }
 
 
