--- a/css/photographer.css
+++ b/css/photographer.css
@@ -72,7 +72,6 @@ body {
     width: 140px;
     padding: 0.6rem;
     border: 0;
-    /* border-radius: 5px 5px 0 0; */
     border-radius: 5px;
     background-color: #901C1C;
     color: white;
@@ -205,9 +204,16 @@ form input {
     width: calc(100% / 3 - 20px);
 }
 
+.div_video {
+    position: relative;
+    width: 100%;
+    height: 250px;
+}
+
 .profilTitleMedia {
     font-weight: normal;
     color: #901C1C;
+    font-size: unset;
     margin-top: 0;
 }
 
@@ -237,7 +243,39 @@ form input {
 }
 
 .profilVideo {
+    position: absolute;
+    object-fit: cover;
+    border-radius: 5px;
     width: 100%;
+    height: 100%;
+    top: -17px;
+    left: 0;
+}
+
+.profilVideo:hover{
+    box-shadow: 0px 0px 15px 0px #00000078;
+    margin-left: -2%;
+    margin-top: -3%;
+    width: 104%;
+    height: 104%;
+    transition: 0.25s;
+}
+
+.iconPlay {
+    border-style: solid;
+    box-sizing: border-box;
+    border-width: 35px 0px 35px 60px;
+    border-color: transparent transparent transparent #ffffffad;
+    position: absolute;
+    z-index: 1;
+    top: 30%;
+    left: 43%;
+    pointer-events: none;
+}
+
+.mp4 {
+    position: absolute;
+    bottom: -18px;
 }
 
 .textAera {
