--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,11 @@ h1 {
     margin-left: 100px;
 }
 
+.photographerBloc {
+    text-align: center;
+    text-decoration: none;
+}
+
 .photographer_section {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
