--- a/css/photographer.css
+++ b/css/photographer.css
@@ -127,8 +127,27 @@ body {
     left: 6rem;
 }
 
-.dropdown_content {
+.dropdown.active2 #selected{
+    border-radius: 5px 5px 0 0;
+}
+.dropdown.active2 #selected::before{
+    content:'';
+    width: 180px;
+    height:1.5px;
+    margin-left: 0.5rem;
+    background:white;
+    position: absolute;
+    bottom:0;
+    left:0;
+}
+
+.dropdown_content{
     display: none;
+}
+
+.dropdown_content {
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
 }
 
 #selected {
