--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ body {
     margin: 0;
     margin-left: auto;
     margin-right: auto;
-    width: 85%;
 }
 
 
@@ -22,9 +21,13 @@ h1 {
     margin-right: 100px;
 }
 
+.homePage {
+    display: inline-flex;
+    margin-left: 100px;
+}
+
 .logo {
     height: 50px;
-    margin-left: 100px;
 }
 
 .photographerBloc {
