--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,10 @@ body {
     margin-right: auto;
 }
 
-body :focus {
+/* body :focus {
     outline: red solid 3px;
     border-radius: 5px;
-}
+} */
 
 header {
     display: flex;
